# FFMPEG_Player

./: README.md  build.gradle  gradle.properties
app/: CMakeLists.txt  build.gradle  kotliner.def  proguard-rules.pro
app/src/androidTest/java/com/carljay/ffmpeg_project/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: codec.c  ffmpeg_jni.c  ffmpeg_jni.cpp  ffmpeg_object.c  my_queue.c  native-lib.cpp  opensl_es.c  opensl_native.c  queue.c  surface_native.c
app/src/main/cpp/include/: Log.h  audio_object.h  codec.h  ffmpeg_object.h  head.h  media_player.h  media_record.h  my_queue.h  opensl_es.h  opensl_native.h  queue.h  surface_native.h  video_object.h
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/cpp/player/: audio_object.cpp  ffmpeg_object.cpp  ffmpeg_object.h  media_player.cpp  media_record.cpp  video_object.cpp
app/src/main/java/com/carljay/ffmpeg_project/: MainActivity.kt  MediaPlayer.kt  MediaRecord.kt
app/src/main/java/com/carljay/ffmpeg_project/ffmpeg/: FFmpegObject.kt  FFmpegRecord.kt  VideoPlayer.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/carljay/ffmpeg_project/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
